go-web-app-chart/templates/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: go-web-app
  namespace: default
  labels:
    app: go-web-app
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: go-web-app
  type: NodePort
